--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </section>
     <footer>
-        <p>© Mahedi 2021,all rights reserved.</p>
+        <p>© Mahedi Hasan 2023,all rights reserved.</p>
     </footer>
 </body>
 </html>
